--- a/HTML-CSS/themeDemo/htmldemo.net/sharma/sharma/login.html
+++ b/HTML-CSS/themeDemo/htmldemo.net/sharma/sharma/login.html
@@ -1022,7 +1022,7 @@
                                                 <input type="password" id="passwordRegister" name="password" placeholder="Password" />
                                                 <input type="text" id="phone" name="phone-number" placeholder="Phone" />
                                                 <div class="button-box">
-                                                    <button type="submit" id="registerButton"><span>Register</span></button>
+                                                    <button type="submit"><span>Register</span></button>
                                                 </div>
                                             </form>
                                         </div>
