--- a/HTML-CSS/themeDemo/htmldemo.net/sharma/sharma/loginController.html
+++ b/HTML-CSS/themeDemo/htmldemo.net/sharma/sharma/loginController.html
@@ -553,8 +553,8 @@
 
 
         <div class="container1">
-            <button id="option1">Products</button>
-            <button id="option2">Users</button>
+            <button> <a id="productTable" href = "#"> Products </a></button>
+            <button> <a id="userTable" href = "#"> Users </a></button>
             <button id="option3">Option 3</button>
         </div>
 
