cap nhat ngay 13/11

--- a/HTML-CSS/themeDemo/htmldemo.net/sharma/sharma/AdminController.html
+++ b/HTML-CSS/themeDemo/htmldemo.net/sharma/sharma/AdminController.html
@@ -553,9 +553,15 @@
 
 
         <div class="container1">
-            <button> <a id="productTable" href = "#"> Products </a></button>
-            <button> <a id="userTable" href = "#"> Users </a></button>
-            <button id="option3">Option 3</button>
+            <form id="productForm">
+                <button type="submit" id="productTable"> Products </button>
+            </form>
+            <form id="userForm">
+                <button type="submit" id="userTable"> Users </button>
+            </form>
+            <form id="imageForm">
+                <button type="submit" id="imageTable"> Images </button>
+            </form>
         </div>
 
         <!-- Mobile Header Section Start -->
@@ -1209,6 +1215,7 @@
             </script>
 
         <script src="assets/js/userAuth.js"></script>
+        <script src="assets/js/adminController.js"></script>
     </body>
 
 <!-- Mirrored from htmldemo.net/sharma/sharma/compare.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 22 Mar 2024 20:40:55 GMT -->
